# warden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SCORING.md  action.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  warden-example.yml.sample
docs/: WARDEN_STATE.md
example-project/: Dockerfile  README.md  agent.py  requirements.txt
gallery/: README.md  build.py  targets.toml
tests/test_competitors/: test_competitors.py
tests/test_config/: test_loader.py
tests/test_integration/: test_full_scan.py
tests/test_report/: test_json_report.py
tests/test_scanner/: test_agent_arch.py  test_audit.py  test_code_analyzer.py  test_dependencies.py  test_infra.py  test_mcp.py  test_secrets.py  test_trap_defense.py
tests/test_scoring/: test_dimensions.py  test_engine.py
tests/test_security/: test_html_self_contained.py  test_no_network.py  test_no_sharkrouter.py  test_secrets_masking.py
vigia-orchestrator/: index.html  report.html  report.json  report.sarif
warden/: __init__.py  __main__.py  cli.py  config.py  models.py
warden/gtm/: signals.py
warden/report/: html_writer.py  json_writer.py  terminal.py
warden/scanner/: _common.py  agent_arch_scanner.py  audit_scanner.py  cicd_scanner.py  code_analyzer.py  competitors.py  dependency_scanner.py  framework_scanner.py  iac_scanner.py  infra_analyzer.py  mcp_scanner.py  secrets_scanner.py  trap_defense_scanner.py
warden/scoring/: dimensions.py  engine.py
